--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="eng">
+
 <head>
   <title>Employee Directory</title>
   <meta charset="utf-8">
@@ -9,8 +10,11 @@
 </head>
 
 <body>
+  <h2>AWESOME STARTUP EMPLOYEE DIRECTORY</h2>
+  <input type="text" class="search" id="search" placeholder="Search...">
   <div class="container" id="container"></div>
   <div class="wrapModalUser" id="wrapModalUser"></div>
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
